--- a/atendimento/templates/em-atendimento.html
+++ b/atendimento/templates/em-atendimento.html
@@ -1,6 +1,8 @@
 {% extends 'template.html' %}
+{% block subtitulo %}
+- Atendimento
+{% endblock %}
 {% block content %}
-
   <h1>EM ATENDIMENTO</h1>
   <p>Tipo de atendimento: {{ senha.tipo_atendimento.nome }}</p>
   <p>Senha: {{ senha.numero_senha }}</p>
