--- a/atendimento/templates/senhas_chamadas.html
+++ b/atendimento/templates/senhas_chamadas.html
@@ -3,7 +3,7 @@
 {% endblock %}
 {% block content %}
 <div id="minha-div">
-  <table>
+  <table class="ultima-senha">
     <thead>
       <tr>
         <th>Senha</th>
@@ -16,7 +16,8 @@
     </tbody>
   </table>
 </div>
-<div id="anteriores">
+<div class="senha-anterior">
+  <p class="titulo-anterior"> Anteriores </p>
   <table>
     <thead>
 
