--- a/atendimento/templates/proxima_senha.html
+++ b/atendimento/templates/proxima_senha.html
@@ -1,3 +1,4 @@
+<div class"proxima-senha">
 {% extends 'template.html' %}
 {% block subtitulo %}
 - Atendimento
@@ -45,3 +46,4 @@
 <script src="/static/js/atendente.js"></script>
   
 {% endblock %}
+</div>
