--- a/atendimento/templates/gerar_senha.html
+++ b/atendimento/templates/gerar_senha.html
@@ -23,5 +23,11 @@
         <input type="submit" value="Gerar senha">
       </form>
 
+      <div>
+        <p>Numero de pessoas na fila:</p>
+        <p id="quantFila"></p>
+      </div>
+
+      <script src="/static/js/quantidadeFila.js"></script>
 {% endblock %}
 </div>
