--- a/senhaFacil/static/css/style.css
+++ b/senhaFacil/static/css/style.css
@@ -16,6 +16,7 @@ html {
 
 table {
     width: 100%;
+
 }
 
 tbody#tbody {
@@ -25,13 +26,16 @@ tbody#tbody {
 a {
     display: grid;
     padding: 10px 20px;
-    background: #59c25d;
+    background: #59c289;
     color: #fff;
     justify-content: center;
     border-radius: 20px;
     text-decoration: none;
     margin-bottom: 10px;
-
 }
 
 h1 {text-align: center;margin-top: -20px;}
+ 
+form {
+    /*display: none;*/
+}
