--- a/atendimento/templates/senhas_chamadas.html
+++ b/atendimento/templates/senhas_chamadas.html
@@ -27,6 +27,11 @@
     </tbody>
   </table>
 </div>
+
+<video controls>
+  <source src="/static/video/" type="video/mp4">
+</video>
+
 <script src="/static/js/chamado.js"></script>
 {% endblock %} 
 </div>
