--- a/atendimento/templates/senhas_chamadas.html
+++ b/atendimento/templates/senhas_chamadas.html
@@ -7,7 +7,7 @@
   <table class="ultima-senha">
     <thead>
       <tr>
-        <th class="senha">Senha</th>
+        <!-- <th class="senha">Senha</th> -->
         <th class="nome">Nome</th>
         <th class="cabine">Cabine</th>
         <!-- <th>Data e hora da chamada</th> -->
@@ -28,8 +28,8 @@
   </table>
 </div>
 
-<video controls>
-  <source src="/static/video/" type="video/mp4">
+<video muted loop autoplay>
+  <source src="/static/video/video_display.mp4" type="video/mp4">
 </video>
 
 <script src="/static/js/chamado.js"></script>
