--- a/atendimento/templates/gerar_senha.html
+++ b/atendimento/templates/gerar_senha.html
@@ -28,6 +28,6 @@
       <p id="quantFila"></p>
     </div>
 
-    <script src="/static/js/quantidadeFila.js"></script>
+    <script src="/static/js/gerarSenha.js"></script>
 {% endblock %}
 </div>
