--- a/atendimento/templates/senhas_chamadas.html
+++ b/atendimento/templates/senhas_chamadas.html
@@ -28,7 +28,7 @@
   </table>
 </div>
 
-<video muted loop autoplay>
+<video muted loop autoplay id="videoDisplay">
   <source src="/static/video/video_display.mp4" type="video/mp4">
 </video>
 
