--- a/atendimento/templates/gerar_senha.html
+++ b/atendimento/templates/gerar_senha.html
@@ -23,7 +23,7 @@
         <input type="submit" value="Gerar senha">
     </form>
 
-    <div>
+    <div class="pessoas-fila">
       <p>Numero de pessoas na fila:</p>
       <p id="quantFila"></p>
     </div>
