--- a/atendimento/templates/gerar_senha.html
+++ b/atendimento/templates/gerar_senha.html
@@ -24,8 +24,14 @@
     </form>
 
     <div class="pessoas-fila">
-      <p>Numero de pessoas na fila:</p>
+      <p>Numero de pessoas na fila comum:</p>
       <p id="quantFila"></p>
+      <br>
+      <p>Numero de pessoas na fila prefencial:</p>
+      <p id="quantPref"></p>
+      <br>
+      <p>Numero de pessoas na fila processos:</p>
+      <p id="quantProc"></p>
     </div>
 
     <script src="/static/js/gerarSenha.js"></script>
