--- a/atendimento/templates/senhas_chamadas.html
+++ b/atendimento/templates/senhas_chamadas.html
@@ -8,7 +8,7 @@
     <thead>
       <tr>
         <!-- <th class="senha">Senha</th> -->
-        <th class="nome">Nome</th>
+        <th class="nome">Senha</th>
         <th class="cabine">Cabine</th>
         <!-- <th>Data e hora da chamada</th> -->
       </tr>
