--- a/atendimento/templates/proxima_senha.html
+++ b/atendimento/templates/proxima_senha.html
@@ -30,7 +30,7 @@
       <thead>
         <tr>
           <th>Senha</th>
-          <th>Nome do cliente</th>          
+          <th>Tipo de Atendimento</th>          
           <!-- <th>Data e hora da chamada</th> -->
         </tr>
       </thead>
