--- a/atendimento/templates/gerar_senha.html
+++ b/atendimento/templates/gerar_senha.html
@@ -12,7 +12,7 @@
         <!-- <br> --> 
         <label for="tipo_atendimento">Tipo de atendimento:</label>
         {% for tipo in tipos_atendimento %}
-        <input type="radio" name="tipo_atendimento" value="{{tipo.id}}" id="tipo_atendimento" class="{{tipo.nome}}">
+        <input type="radio" name="tipo_atendimento" value="{{tipo.id}}" id="{{tipo.id}}" class="{{tipo.nome}}">
         <label for="{{tipo.id}}">{{tipo.nome}}</label><br>  
         {% endfor %}
         <!-- <select id="tipo_atendimento" name="tipo_atendimento" required>
@@ -28,11 +28,12 @@
     </form>
 
     <div class="pessoas-fila">
-      <p>Numero de pessoas na fila comum:</p>
+      <p class="pessoas-frente">Pessoas na sua frente:</p>
+      <p>Fila Comum:</p>
       <p id="quantFila"></p>
-      <p>Numero de pessoas na fila prefencial:</p>
+      <p>Fila Prefencial:</p>
       <p id="quantPref"></p>
-      <p>Numero de pessoas na fila processos:</p>
+      <p>Fila Processos:</p>
       <p id="quantProc"></p>
     </div>
 
