--- a/atendimento/templates/senhas_chamadas.html
+++ b/atendimento/templates/senhas_chamadas.html
@@ -22,7 +22,7 @@
   <source src="/static/video/video_display.mp4" type="video/mp4">
 </video>
 
-<div class="senha-anterior">
+<!-- <div class="senha-anterior">
   <p class="titulo-anterior"> Anteriores </p>
   <table>
     <thead>
@@ -31,7 +31,7 @@
     <tbody id="tbodyanteriores">
     </tbody>
   </table>
-</div>
+</div> -->
 
 
 
