--- a/atendimento/templates/senhas_chamadas.html
+++ b/atendimento/templates/senhas_chamadas.html
@@ -3,6 +3,7 @@
 {% block subtitulo %}
 {% endblock %}
 {% block content %}
+<div class="header-display"> <img src="/static/img/logo branco.png"> </div>
 <div id="minha-div">
   <table class="ultima-senha">
     <thead>
