--- a/atendimento/templates/em-atendimento.html
+++ b/atendimento/templates/em-atendimento.html
@@ -8,7 +8,7 @@
   <h1>EM ATENDIMENTO</h1>
   <p>Tipo de atendimento: {{ senha.tipo_atendimento.nome }}</p>
   <p>Senha: {{ senha.numero_senha }}</p>
-  <p>Nome do cliente: {{ senha.nome_cliente }}</p>
+ <!---  <p>Nome do cliente: {{ senha.nome_cliente }}</p> -->
   <p>Data do atendimento: {{ senha.data_atendimento }}</p>
   <a href="/finalizar-atendimento/{{senha.id}}/{{prefixo}}">Finalizar atendimento</a>
 
