--- a/atendimento/templates/senhas_chamadas.html
+++ b/atendimento/templates/senhas_chamadas.html
@@ -5,7 +5,7 @@
 {% block content %}
 <div class="header-display"> <img src="/static/img/logo branco.png"> </div>
 <div id="minha-div">
-  <table class="ultima-senha">
+  <table class="ultima-senha" id="tabela-senhas">
     <thead>
       <tr>
         <!-- <th class="senha">Senha</th> -->
