--- a/senhaFacil/static/css/style.css
+++ b/senhaFacil/static/css/style.css
@@ -1,3 +1,4 @@
+html {overflow-y: hidden;overflow-x: hidden;}
 body {background: #0D578E;color: #fff;}
 
 /* Gerar Senha */
@@ -91,8 +92,7 @@ body {background: #0D578E;color: #fff;}
 .senhas-chamadas table.ultima-senha {
     font-size: 60px;
     text-align: center;
-    margin-left: auto;
-    margin-right: auto;
+    width: 100%;
     color: #000;
 }
 
@@ -154,3 +154,31 @@ body {background: #0D578E;color: #fff;}
 }
 
 .proxima-senha div table th {padding: 0 30px;}
+
+/* Em atendimento */
+.em-atendimento {
+    background: #fff;
+    color: #000;
+    font-size: 40px;
+    width: fit-content;
+    padding: 2% 5%;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 35px;
+}
+
+.em-atendimento h1 {
+    margin: 15px;
+}
+
+.em-atendimento a {background: #ac3b3b;color: #fff;padding: 5% 1%;border-radius: 45px;text-decoration-line: none;width: 100%;display: flex;justify-content: center;}
+
+.em-atendimento div table {
+    margin-top: 40px;
+    color: #000;
+    display: grid;
+    justify-content: center;
+    font-size: 30px;
+}
+
+.em-atendimento div table th {padding: 0 30px;}
