--- a/atendimento/templates/proxima_senha.html
+++ b/atendimento/templates/proxima_senha.html
@@ -17,7 +17,7 @@
   
   {% if senha %}
   <a href="/em-atendimento/{{senha.id}}/{{prefixo}}">
-    Em atendimento
+    Atender
   </a>
   {% else %}
   <a href="/chamar-proxima-senha/{{prefixo}}">
