--- a/atendimento/static/css/style.css
+++ b/atendimento/static/css/style.css
@@ -13,12 +13,11 @@ body {background: #0D578E;color: #fff;}
     margin-left: auto;
     margin-right: auto;
     width: 90%;
-    height: 90%;
 }
 
 .gerar-senha p#quantFila, p#quantPref, p#quantProc {align-self: end;position: relative;padding-right: 100px;}
 
-.gerar-senha form {display: inline-flex;flex-direction: row;align-items: center;width: 100%;width: -webkit-fill-available;flex-wrap: wrap;}
+.gerar-senha form {display: flex;flex-direction: row;width: 100%;width: -webkit-fill-available;flex-wrap: wrap;align-content: center;align-items: center;}
 
 .gerar-senha form label {
     background: #fff;
@@ -65,7 +64,7 @@ body {background: #0D578E;color: #fff;}
     height: 110px;
 }
 
-.gerar-senha p#quantFila, p#quantPref, p#quantProc {align-self: end;position: relative;padding-right: 100px;padding-left: 20px;}
+.gerar-senha p#quantFila, p#quantPref, p#quantProc {align-self: end;position: relative;padding-right: 45px;padding-left: 20px;}
 
 
 
@@ -74,12 +73,13 @@ body {background: #0D578E;color: #fff;}
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    font-size: 40px;
+    font-size: 35px;
     justify-content: center;
+    margin-top: -25px;
 }
 
 .gerar-senha p.pessoas-frente {
-    padding-right: 70px;
+    padding-right: 30px;
 }
 
 /* display */
