--- a/atendimento/templates/senhas_chamadas.html
+++ b/atendimento/templates/senhas_chamadas.html
@@ -23,6 +23,8 @@
   <source src="/static/video/video_display.mp4" type="video/mp4">
 </video>
 
+<audio src="/static/video/toque.mp3" id="toque"></audio>
+
 <!-- <div class="senha-anterior">
   <p class="titulo-anterior"> Anteriores </p>
   <table>
