--- a/atendimento/templates/senhas_chamadas.html
+++ b/atendimento/templates/senhas_chamadas.html
@@ -25,7 +25,7 @@
 
 <audio src="/static/video/toque.mp3" id="toque"></audio>
 
-<!-- <div class="senha-anterior">
+<div class="senha-anterior">
   <p class="titulo-anterior"> Anteriores </p>
   <table>
     <thead>
@@ -34,7 +34,7 @@
     <tbody id="tbodyanteriores">
     </tbody>
   </table>
-</div> -->
+</div>
 
 
 
