--- a/senhaFacil/static/css/style.css
+++ b/senhaFacil/static/css/style.css
@@ -13,12 +13,11 @@ body {background: #0D578E;color: #fff;}
     margin-left: auto;
     margin-right: auto;
     width: 90%;
-    height: 90%;
 }
 
 .gerar-senha p#quantFila, p#quantPref, p#quantProc {align-self: end;position: relative;padding-right: 100px;}
 
-.gerar-senha form {display: inline-flex;flex-direction: row;align-items: center;width: 100%;width: -webkit-fill-available;flex-wrap: wrap;}
+.gerar-senha form {display: flex;flex-direction: row;width: 100%;width: -webkit-fill-available;flex-wrap: wrap;align-content: center;align-items: center;}
 
 .gerar-senha form label {
     background: #fff;
@@ -65,38 +64,39 @@ body {background: #0D578E;color: #fff;}
     height: 110px;
 }
 
-.gerar-senha p#quantFila, p#quantPref, p#quantProc {align-self: end;position: relative;padding-right: 100px;padding-left: 20px;}
-
-
+.gerar-senha p#quantFila, p#quantPref, p#quantProc {align-self: end;position: relative;padding-right: 45px;padding-left: 20px;}
 
 
 .gerar-senha .pessoas-fila {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    font-size: 40px;
+    font-size: 35px;
     justify-content: center;
+    margin-top: -25px;
 }
 
 .gerar-senha p.pessoas-frente {
-    padding-right: 70px;
+    padding-right: 30px;
 }
 
 /* display */
 .senhas-chamadas div#minha-div {
     float: left;
-    width: 30%;
-    height: 76%;
+    width: 50%;
+    height: 100%;
     background: #fff;
     border-radius: 0 30px 30px 0;
 }
 
 .senhas-chamadas video#videoDisplay {
     float: right;
-    width: 67%;
+    width: 50%;
     height: auto;
     position: absolute;
     margin-left: 40px;
+    right: 0;
+    bottom: 140px;
 }
 
 .senhas-chamadas table.ultima-senha {
@@ -114,6 +114,9 @@ body {background: #0D578E;color: #fff;}
 
 .senhas-chamadas table.ultima-senha tbody#tbody {
     color: red;
+    -webkit-text-stroke-width: 4px;
+    -webkit-text-stroke-color: black;
+    font-family: sans-serif;
 }
 
 .senhas-chamadas .header-display {
@@ -131,11 +134,15 @@ body {background: #0D578E;color: #fff;}
 
 .senhas-chamadas tbody tr:nth-child(odd){
   background-color: #bcd2f8;
-
 }
 .senhas-chamadas tr:nth-child(even) {
     background-color: #e4eeff;
 }
+.senhas-chamadas tbody#tbody {
+    font-size: 175px;
+}
+
+
 
 /* proxima senha */
 .proxima-senha {
@@ -156,7 +163,7 @@ body {background: #0D578E;color: #fff;}
 .proxima-senha a {background: #3dac3b;color: #fff;padding: 5% 1%;border-radius: 45px;text-decoration-line: none;width: 100%;display: flex;justify-content: center;}
 
 .proxima-senha div table {
-    margin-top: 40px;
+    margin-top: 20px;
     color: #000;
     display: grid;
     justify-content: center;
@@ -164,6 +171,25 @@ body {background: #0D578E;color: #fff;}
 }
 
 .proxima-senha div table th {padding: 0 30px;}
+
+
+
+.proxima-senha tbody#tbody tr {
+    display: flex;
+    justify-content: space-around;
+}
+
+.proxima-senha thead {
+    /* display: flex; */
+    justify-content: space-aroun;
+}
+
+.proxima-senha thead tr {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+}
 
 /* Em atendimento */
 .em-atendimento {
