--- a/atendimento/static/css/style.css
+++ b/atendimento/static/css/style.css
@@ -87,16 +87,16 @@ body {background: #0D578E;color: #fff;}
     height: 100%;
     background: #fff;
     border-radius: 0 30px 30px 0;
+    z-index: 4;
+    position: absolute;
 }
 
 .senhas-chamadas video#videoDisplay {
     float: right;
-    width: 50%;
+    width: 48%;
     height: auto;
-    position: absolute;
-    margin-left: 40px;
-    right: 0;
-    bottom: 140px;
+    position: relative;
+    z-index: 1;
 }
 
 .senhas-chamadas table.ultima-senha {
@@ -218,3 +218,34 @@ body {background: #0D578E;color: #fff;}
 }
 
 .em-atendimento div table th {padding: 0 30px;}
+
+/* fix largura ultimas senhas */
+.senha-anterior {
+    display: inline-flex;
+    align-items: center;
+    bottom: 24px;
+    flex-direction: row;
+    width: 48%;
+    font-size: 40px;
+    justify-content: center;
+    font-family: sans-serif;
+    position: absolute;
+    right: 0;
+}
+
+tbody#tbodyanteriores {
+    display: flex;
+    flex-wrap: nowrap;
+    flex-direction: row;
+    justify-content: center;
+    font-size: 62px;
+}
+
+tbody#tbodyanteriores tr {
+    margin: 0 10px;
+}
+
+tbody#tbodyanteriores tr {
+    background: unset;
+    color: red;
+}
