--- a/atendimento/templates/senhas_chamadas.html
+++ b/atendimento/templates/senhas_chamadas.html
@@ -28,7 +28,7 @@
 <div class="senha-anterior">
   <p class="titulo-anterior"> Anteriores </p>
   <table>
-    <thead>
+    <thead id="tHeader">
 
     </thead>
     <tbody id="tbodyanteriores">
