--- a/atendimento/static/css/style.css
+++ b/atendimento/static/css/style.css
@@ -233,12 +233,24 @@ body {background: #0D578E;color: #fff;}
     right: 0;
 }
 
+thead#tHeader {
+    display: flex;
+    flex-wrap: nowrap;
+    flex-direction: row;
+    justify-content: center;
+    font-size: 62px;
+}
+
 tbody#tbodyanteriores {
     display: flex;
     flex-wrap: nowrap;
     flex-direction: row;
     justify-content: center;
     font-size: 62px;
+}
+
+thead#tHeader th {
+    margin: 0 10px;
 }
 
 tbody#tbodyanteriores tr {
