--- a/atendimento/templates/gerar_senha.html
+++ b/atendimento/templates/gerar_senha.html
@@ -26,7 +26,7 @@
         <br>
         <input type="submit" value="Gerar senha">
     </form>
-
+<!-- 
     <div class="pessoas-fila">
       <p class="pessoas-frente">Pessoas na sua frente:</p>
       <p>Fila Comum:</p>
@@ -35,7 +35,7 @@
       <p id="quantPref"></p>
       <p>Fila Processos:</p>
       <p id="quantProc"></p>
-    </div>
+    </div> -->
 
     <script src="/static/js/gerarSenha.js"></script>
 {% endblock %}
