--- a/atendimento/static/css/style.css
+++ b/atendimento/static/css/style.css
@@ -237,8 +237,8 @@ thead#tHeader {
     display: flex;
     flex-wrap: nowrap;
     flex-direction: row;
-    justify-content: center;
-    font-size: 62px;
+    justify-content: space-around;
+    font-size: 29px;
 }
 
 tbody#tbodyanteriores {
