--- a/atendimento/templates/senhas_chamadas.html
+++ b/atendimento/templates/senhas_chamadas.html
@@ -26,7 +26,7 @@
 <audio src="/static/video/toque.mp3" id="toque"></audio>
 
 <div class="senha-anterior">
-  <p class="titulo-anterior"> Anteriores </p>
+  <p class="titulo-anterior"> Últimos </p>
   <table>
     <thead id="tHeader">
 
