--- a/atendimento/static/css/style.css
+++ b/atendimento/static/css/style.css
@@ -261,3 +261,37 @@ tbody#tbodyanteriores tr {
     background: unset;
     color: red;
 }
+
+/* pagina de erro */
+
+div.caixa-erro{
+    background: #fff;
+    color: #000;
+    font-size: 40px;
+    width: fit-content;
+    padding: 2% 5%;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 35px;
+}
+
+a.botao-voltar {
+    width: 100%;
+    height: 80px;
+    background: #57B956;
+    color: #fff;
+    font-size: 33px;
+    border: unset;
+    font-size: 50px;
+    border-radius: 45px;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+p#erro-titulo {
+    color: red;
+    text-align: center; 
+    font-size: 80px;
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: black;
+}
