--- a/atendimento/static/css/style.css
+++ b/atendimento/static/css/style.css
@@ -83,20 +83,18 @@ body {background: #0D578E;color: #fff;}
 /* display */
 .senhas-chamadas div#minha-div {
     float: left;
-    width: 50%;
-    height: 100%;
+    width: 30%;
+    height: 76%;
     background: #fff;
     border-radius: 0 30px 30px 0;
-    z-index: 4;
-    position: absolute;
 }
 
 .senhas-chamadas video#videoDisplay {
     float: right;
-    width: 48%;
+    width: 67%;
     height: auto;
-    position: relative;
-    z-index: 1;
+    position: absolute;
+    margin-left: 40px;
 }
 
 .senhas-chamadas table.ultima-senha {
@@ -114,9 +112,6 @@ body {background: #0D578E;color: #fff;}
 
 .senhas-chamadas table.ultima-senha tbody#tbody {
     color: red;
-    -webkit-text-stroke-width: 4px;
-    -webkit-text-stroke-color: black;
-    font-family: sans-serif;
 }
 
 .senhas-chamadas .header-display {
@@ -139,7 +134,7 @@ body {background: #0D578E;color: #fff;}
     background-color: #e4eeff;
 }
 .senhas-chamadas tbody#tbody {
-    font-size: 175px;
+    font-size: 110px;
 }
 
 
@@ -160,7 +155,11 @@ body {background: #0D578E;color: #fff;}
     margin: 15px;
 }
 
-.proxima-senha a {background: #b9b820;color: #fff;padding: 5% 1%;border-radius: 45px;text-decoration-line: none;width: 100%;display: flex;justify-content: center;}
+.proxima-senha a {background: #3dac3b;color: #fff;padding: 5% 1%;border-radius: 45px;text-decoration-line: none;width: 100%;display: flex;justify-content: center;}
+
+.proxima-senha a[href="/chamar-proxima-senha/"] {
+    background: #20b92c !important;
+}
 
 .proxima-senha div table {
     margin-top: 20px;
@@ -218,80 +217,3 @@ body {background: #0D578E;color: #fff;}
 }
 
 .em-atendimento div table th {padding: 0 30px;}
-
-/* fix largura ultimas senhas */
-.senha-anterior {
-    display: inline-flex;
-    align-items: center;
-    bottom: 24px;
-    flex-direction: row;
-    width: 48%;
-    font-size: 40px;
-    justify-content: center;
-    font-family: sans-serif;
-    position: absolute;
-    right: 0;
-}
-
-thead#tHeader {
-    display: flex;
-    flex-wrap: nowrap;
-    flex-direction: row;
-    justify-content: space-around;
-    font-size: 29px;
-}
-
-tbody#tbodyanteriores {
-    display: flex;
-    flex-wrap: nowrap;
-    flex-direction: row;
-    justify-content: center;
-    font-size: 62px;
-}
-
-thead#tHeader th {
-    margin: 0 10px;
-}
-
-tbody#tbodyanteriores tr {
-    margin: 0 10px;
-}
-
-tbody#tbodyanteriores tr {
-    background: unset;
-    color: red;
-}
-
-/* pagina de erro */
-
-div.caixa-erro{
-    background: #fff;
-    color: #000;
-    font-size: 40px;
-    width: fit-content;
-    padding: 2% 5%;
-    margin-left: auto;
-    margin-right: auto;
-    border-radius: 35px;
-}
-
-a.botao-voltar {
-    width: 100%;
-    height: 80px;
-    background: #57B956;
-    color: #fff;
-    font-size: 33px;
-    border: unset;
-    font-size: 50px;
-    border-radius: 45px;
-    display: flex;
-    justify-content: space-evenly;
-}
-
-p#erro-titulo {
-    color: red;
-    text-align: center; 
-    font-size: 80px;
-    -webkit-text-stroke-width: 1px;
-    -webkit-text-stroke-color: black;
-}
