--- a/atendimento/static/css/style.css
+++ b/atendimento/static/css/style.css
@@ -83,18 +83,19 @@ body {background: #0D578E;color: #fff;}
 /* display */
 .senhas-chamadas div#minha-div {
     float: left;
-    width: 50%;
+    width: 60%;
     height: 100%;
     background: #fff;
     border-radius: 0 30px 30px 0;
     z-index: 4;
     position: absolute;
+    top: 15%;
 }
 
 .senhas-chamadas video#videoDisplay {
     float: right;
-    width: 48%;
-    height: auto;
+    width: 35%;
+    height: 100%;
     position: relative;
     z-index: 1;
 }
@@ -113,33 +114,35 @@ body {background: #0D578E;color: #fff;}
  
 
 .senhas-chamadas table.ultima-senha tbody#tbody {
-    color: red;
-    -webkit-text-stroke-width: 4px;
+    color: #f88a19;
+    -webkit-text-stroke-width: 2px;
     -webkit-text-stroke-color: black;
     font-family: sans-serif;
 }
 
 .senhas-chamadas .header-display {
-    height: 180px;
+    height: 125px;
     display: flex;
-    padding: 24px;
-    justify-content: center;
-}
-.senhas-chamadas .header-display {
-    height: 180px;
-    display: flex;
-    padding: 24px;
-    justify-content: center;
+    padding-left: 15%;
+    padding-bottom: 1%;
+    float: left;
 }
 
 .senhas-chamadas tbody tr:nth-child(odd){
-  background-color: #bcd2f8;
+    background-color: #bcd2f8;
 }
 .senhas-chamadas tr:nth-child(even) {
     background-color: #e4eeff;
 }
 .senhas-chamadas tbody#tbody {
-    font-size: 175px;
+    font-size: 75px;
+}
+
+.senhas-chamadas tbody tr:nth-child(-n+2){
+    color: #f82219;
+    font-size: 150px;
+    -webkit-text-stroke-width: 4px;
+    -webkit-text-stroke-color: black;
 }
 
 
