--- a/atendimento/templates/senhas_chamadas.html
+++ b/atendimento/templates/senhas_chamadas.html
@@ -20,7 +20,7 @@
 </div>
 
 <video muted loop autoplay id="videoDisplay">
-  <source src="/static/video/video_display.mp4" type="video/mp4">
+  <source src="/static/video/video_display.webm" type="video/mp4">
 </video>
 
 <audio src="/static/video/toque.mp3" id="toque"></audio>
