--- a/senhaFacil/static/css/style.css
+++ b/senhaFacil/static/css/style.css
@@ -15,6 +15,15 @@ body {background: #0D578E;color: #fff;}
     width: 90%;
 }
 
+label[for = "2"]::after{
+    content: url('/static/img/preferencial-img_resized_resized.png');
+    width: 0px;
+    height: auto;
+    display: inline;
+    padding-left: 15px;
+}
+
+
 .gerar-senha p#quantFila, p#quantPref, p#quantProc {align-self: end;position: relative;padding-right: 100px;}
 
 .gerar-senha form {display: flex;flex-direction: row;width: 100%;width: -webkit-fill-available;flex-wrap: wrap;align-content: center;align-items: center;}
@@ -34,16 +43,23 @@ body {background: #0D578E;color: #fff;}
     color: #ffffff;
 }
 
+
+
 .gerar-senha input[type="submit"] {
     /* position: absolute; */
     width: 100%;
     height: 80px;
-    background: #57B956;
+    background-color: rgba(245, 245, 245, 0.959);
     color: #fff;
     font-size: 33px;
     border: unset;
     font-size: 50px;
 }
+
+.gerar-senha input:focus {
+    border-color: #0099ff;
+    transition: border-color 0.3s ease-in-out;
+  }
 
 .gerar-senha label[for="tipo_atendimento"] {
     display: none;
@@ -83,18 +99,19 @@ body {background: #0D578E;color: #fff;}
 /* display */
 .senhas-chamadas div#minha-div {
     float: left;
-    width: 50%;
+    width: 60%;
     height: 100%;
     background: #fff;
     border-radius: 0 30px 30px 0;
     z-index: 4;
     position: absolute;
+    top: 15%;
 }
 
 .senhas-chamadas video#videoDisplay {
     float: right;
-    width: 48%;
-    height: auto;
+    width: 35%;
+    height: 100%;
     position: relative;
     z-index: 1;
 }
@@ -113,33 +130,35 @@ body {background: #0D578E;color: #fff;}
  
 
 .senhas-chamadas table.ultima-senha tbody#tbody {
-    color: red;
-    -webkit-text-stroke-width: 4px;
+    color: #f88a19;
+    -webkit-text-stroke-width: 2px;
     -webkit-text-stroke-color: black;
     font-family: sans-serif;
 }
 
 .senhas-chamadas .header-display {
-    height: 180px;
+    height: 125px;
     display: flex;
-    padding: 24px;
-    justify-content: center;
-}
-.senhas-chamadas .header-display {
-    height: 180px;
-    display: flex;
-    padding: 24px;
-    justify-content: center;
+    padding-left: 15%;
+    padding-bottom: 1%;
+    float: left;
 }
 
 .senhas-chamadas tbody tr:nth-child(odd){
-  background-color: #bcd2f8;
+    background-color: #bcd2f8;
 }
 .senhas-chamadas tr:nth-child(even) {
     background-color: #e4eeff;
 }
 .senhas-chamadas tbody#tbody {
-    font-size: 175px;
+    font-size: 75px;
+}
+
+.senhas-chamadas tbody tr:nth-child(-n+2){
+    color: #f82219;
+    font-size: 150px;
+    -webkit-text-stroke-width: 4px;
+    -webkit-text-stroke-color: black;
 }
 
 
@@ -160,7 +179,11 @@ body {background: #0D578E;color: #fff;}
     margin: 15px;
 }
 
-.proxima-senha a {background: #b9b820;color: #fff;padding: 5% 1%;border-radius: 45px;text-decoration-line: none;width: 100%;display: flex;justify-content: center;}
+.proxima-senha a {background: #cebd27;color: #fff;padding: 5% 1%;border-radius: 45px;text-decoration-line: none;width: 100%;display: flex;justify-content: center;}
+
+.proxima-senha a[href="/chamar-proxima-senha/"] {
+    background: #20b92c !important;
+}
 
 .proxima-senha div table {
     margin-top: 20px;
@@ -264,7 +287,7 @@ tbody#tbodyanteriores tr {
 
 /* pagina de erro */
 
-.caixa-erro{
+div.caixa-erro{
     background: #fff;
     color: #000;
     font-size: 40px;
@@ -273,4 +296,25 @@ tbody#tbodyanteriores tr {
     margin-left: auto;
     margin-right: auto;
     border-radius: 35px;
+}
+
+a.botao-voltar {
+    width: 100%;
+    height: 80px;
+    background: #57B956;
+    color: #fff;
+    font-size: 33px;
+    border: unset;
+    font-size: 50px;
+    border-radius: 45px;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+p#erro-titulo {
+    color: red;
+    text-align: center; 
+    font-size: 80px;
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: black;
 }
