--- a/atendimento/templates/proxima_senha.html
+++ b/atendimento/templates/proxima_senha.html
@@ -38,13 +38,13 @@
       </tbody>
     </table>
   </div> -->
-
+  <p>Quantidade de pessoas na fila:</p>
   <div class="pessoas-fila">
-    <p>Geral:</p>
+    <p id="Paragrafo-G">G:</p>
     <p id="quantFila"></p>
-    <p>Prefencial:</p>
+    <p id="Paragrafo-P">P:</p>
     <p id="quantPref"></p>
-    <p>Processos:</p>
+    <p id="Paragrafo-C">C:</p>
     <p id="quantProc"></p>
   </div> 
 
